# new_york_taxi_data_analysis_project

./: .envrc.local.example  .gitattributes  .gitignore  .rsync-filter  README.md  down.sh  ext.sh  kernel.sh  pyproject.toml  up.sh
notebooks/: T1.ipynb  T1_distributed_repartition_dev.ipynb  T2.ipynb  T3.ipynb  T4.ipynb
notebooks/T6/: T6.ipynb  clustream_consumer.py  consumer.py  docker-compose.yaml  producer.py  readme.md
src/bdproject/: aggregations.py  dataset_helpers.py  distributed_repartition.py  extra_dask.py  filters.py  local_cluster.py  notebook.py  paths.py  schema.py  shapefile.py  slurm_cluster.py  worker_preload.py
